# karstnet

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  TODO.md  changelog.md  makefile  pyproject.toml  requirements.txt  setup.py
data/: Monachou.pl  ReveEveille.sql  corrections.yaml  g_huttes.sql
docs/: NewStatistics_result.xlsx  conf.py  data.rst  example2_import_data.rst  index.rst  installation.rst  requirements.txt
docs/_build/doctrees/: api.doctree  data.doctree  environment.pickle  example1_simple_graph.doctree  example2_import_data.doctree  index.doctree  installation.doctree  simple_example.doctree
docs/_build/html/: .buildinfo  api.html  data.html  example1_simple_graph.html  example2_import_data.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  simple_example.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  simple_example.rst.txt
docs/source/: api.rst  conf.py  data.rst  example1_simple_graph.rst  index.rst  installation.rst
karstnet/: __init__.py  base.py  clustering.py  import_fc.py
karstnet/.pylint.d/: karstnet.base1.stats
notebooks/: Exploit the possibilities of the networkX libray.ipynb  Read-and-clean-therion-sql-enhanced.ipynb  SimpleExamples_withProperties.ipynb  realNetwork_example.ipynb  simpleGraph_example.ipynb  therion_example.ipynb
src/karstnet/: __init__.py  base.py  import_fc.py
tests/: test_karstnet.py
